# convert-qa

./: .gitignore  main.py  pyproject.toml  readme.md
convert_qa/: main.py
convert_qa/add_primary_keys/: main.py
convert_qa/clean_empty_columns/: main.py
convert_qa/encoding/: main.py
convert_qa/remove_control_characters/: main.py
convert_qa/remove_duplicate_rows/: main.py
convert_qa/remove_tables/: main.py
