[tool.poetry]
name = "convert-qa"
version = "0.1.3"
description = "Enables easy comparison of original files to ets converted master copies"
authors = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.scripts]
convert-compare = "convert_qa.convert.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
