[tool.poetry]
name = "convert-qa"
version = "0.5.0"
description = "Enables easy comparison of original files to ets converted master copies"
authors = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]

[tool.poetry.dependencies]
python = ">=3.9"
xmltodict = "^0.13.0"

[tool.poetry.scripts]
convert-compare = "convert_qa.compare.main:main"
convert-encoding = "convert_qa.encoding.main:cli"
clean-empty-columns = "convert_qa.clean_empty_columns.main:cli"
remove-duplicate-rows = "convert_qa.remove_duplicate_rows.main:cli"
remove-tables = "convert_qa.remove_tables.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
